# my-cookiecutter-repo

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_llms.txt
