[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
dependencies = [
  "pandas",
  "openpyxl"
]
authors = [
  { name="AUTHOR", email="EMAIL@domain.com" },
]
description = "DESCRIPTION"
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]

# Same as Black.
line-length = 99
indent-width = 4

# Assume Python 3.11
# Options: https://docs.astral.sh/ruff/settings/#target-version
target-version = "py311"

[tool.ruff.lint]

select = [
    # defaults
    "E4",
    "E7",
    "E9",
    "F",
    # isort
    "I",
    # pydocstyle
    "D",
    # pyupgrade
    "UP",
    # pep8-naming
    "N",]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]

# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.pyright]
typeCheckingMode = "standard"
reportMissingImports = false
reportUnusedVariable = true
pythonVersion = "3.11"